--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="profile-pic">
       <div class="profile">
         <img
-        src="/CV/images/profil.jpg"
+        src="/images/profil.jpg"
         alt=""
         srcset=""
       />
