--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               >Universitas Islam Negeri Sunan Gunung Djati Bandung</a
             >
           </p>
-          <p>Tahun: 2021 - 2025</p>
+          <p>Tahun: 2021 - sekarang</p>
         </li>
         <li>
             <p><strong>Madrasah Aliyah Negeri 1 Kota Bandung</strong></p>
@@ -49,7 +49,7 @@
       </ol>
     </section>
     <section id="skills">
-      <h2>Keterampilan Bahasa Pemrograman</h2>
+      <h2>Keterampilan</h2>
       <ul>
         <li>HTML</li>
         <li>CSS</li>
